; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/atom/sst/extr_sst_drv_interface.c_sst_stream_start.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/atom/sst/extr_sst_drv_interface.c_sst_stream_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.stream_info = type { i32, i32 }
%struct.intel_sst_drv = type { i64 }

@SST_FW_RUNNING = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@STREAM_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @sst_stream_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sst_stream_start(%struct.device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.stream_info*, align 8
  %7 = alloca %struct.intel_sst_drv*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.intel_sst_drv* @dev_get_drvdata(%struct.device* %8)
  store %struct.intel_sst_drv* %9, %struct.intel_sst_drv** %7, align 8
  %10 = load %struct.intel_sst_drv*, %struct.intel_sst_drv** %7, align 8
  %11 = getelementptr inbounds %struct.intel_sst_drv, %struct.intel_sst_drv* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @SST_FW_RUNNING, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %37

16:                                               ; preds = %2
  %17 = load %struct.intel_sst_drv*, %struct.intel_sst_drv** %7, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call %struct.stream_info* @get_stream_info(%struct.intel_sst_drv* %17, i32 %18)
  store %struct.stream_info* %19, %struct.stream_info** %6, align 8
  %20 = load %struct.stream_info*, %struct.stream_info** %6, align 8
  %21 = icmp ne %struct.stream_info* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %3, align 4
  br label %37

25:                                               ; preds = %16
  %26 = load %struct.stream_info*, %struct.stream_info** %6, align 8
  %27 = getelementptr inbounds %struct.stream_info, %struct.stream_info* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.stream_info*, %struct.stream_info** %6, align 8
  %30 = getelementptr inbounds %struct.stream_info, %struct.stream_info* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* @STREAM_RUNNING, align 4
  %32 = load %struct.stream_info*, %struct.stream_info** %6, align 8
  %33 = getelementptr inbounds %struct.stream_info, %struct.stream_info* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  %34 = load %struct.intel_sst_drv*, %struct.intel_sst_drv** %7, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @sst_start_stream(%struct.intel_sst_drv* %34, i32 %35)
  store i32 0, i32* %3, align 4
  br label %37

37:                                               ; preds = %25, %22, %15
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local %struct.intel_sst_drv* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.stream_info* @get_stream_info(%struct.intel_sst_drv*, i32) #1

declare dso_local i32 @sst_start_stream(%struct.intel_sst_drv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
